# src/main/resources/issuer/swagger.json
@@ -1,10 +1,13 @@
 {
+    "schemes": [],
     "swagger": "2.0",
     "info": {
+        "description": "",
         "title": "Datastore API",
         "contact": {},
         "version": "2.8"
     },
+    "host": "",
     "basePath": "/api/v1",
     "paths": {
         "/consent": {
@@ -648,7 +651,8 @@
                 "collect_id",
                 "credential_type",
                 "document_type",
-                "identity"
+                "identity",
+                "jwk"
             ],
             "properties": {
                 "authentic_source": {
@@ -665,6 +669,9 @@
                 },
                 "identity": {
                     "$ref": "#/definitions/model.Identity"
+                },
+                "jwk": {
+                    "$ref": "#/definitions/apiv1_issuer.Jwk"
                 }
             }
         },
@@ -953,6 +960,14 @@
                 }
             }
         },
+        "apiv1_issuer.Credential": {
+            "type": "object",
+            "properties": {
+                "credential": {
+                    "type": "string"
+                }
+            }
+        },
         "apiv1_issuer.Jwk": {
             "type": "object",
             "properties": {
@@ -1001,14 +1016,11 @@
         "apiv1_issuer.MakeSDJWTReply": {
             "type": "object",
             "properties": {
-                "disclosures": {
+                "credentials": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/apiv1_issuer.Credential"
                     }
-                },
-                "jwt": {
-                    "type": "string"
                 }
             }
         },
@@ -1253,6 +1265,10 @@
                     "description": "required: false\nexample: 509567558\nformat: int64",
                     "type": "integer"
                 },
+                "document_data_validation": {
+                    "description": "required: false\nexample: file://path/to/schema.json or http://example.com/schema.json\nformat: string",
+                    "type": "string"
+                },
                 "document_id": {
                     "description": "required: true\nexample: 5e7a981c-c03f-11ee-b116-9b12c59362b9",
                     "type": "string"
@@ -1286,16 +1302,15 @@
         "model.QR": {
             "type": "object",
             "required": [
-                "base64_image",
-                "deep_link"
+                "base64_image"
             ],
             "properties": {
                 "base64_image": {
                     "description": "required: true\nexample: \"ZWFzdGVyIGVnZyE=\"",
                     "type": "string"
                 },
-                "deep_link": {
-                    "description": "required: true\nexample: \"https://example.com\"",
+                "credential_offer": {
+                    "description": "required: true",
                     "type": "string"
                 }
             }
